--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.7</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>back-end-site</finalName>
