--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       <artifactId>postgresql</artifactId>
       <version>42.7.7</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>java-dotenv</artifactId>
+      <version>5.2.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>back-end-site</finalName>
