(chore) Atualiza versão de linguagem no pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>back-end-site</finalName>
+    <finalName>back-end-site</finalName><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>14</source><target>14</target></configuration></plugin></plugins>
   </build>
 </project>
