--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>at.favre.lib</groupId>
-      <artifactId>bcrypt</artifactId>
-      <version>0.10.2</version>
+      <groupId>org.mindrot</groupId>
+      <artifactId>jbcrypt</artifactId>
+      <version>0.4</version>
     </dependency>
   </dependencies>
   <build>
