--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>back-end-site</finalName><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>14</source><target>14</target></configuration></plugin></plugins>
+    <finalName>back-end-site</finalName><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>23</source><target>23</target>
+      <compilerArgs>--enable-preview</compilerArgs>
+  </configuration></plugin></plugins>
   </build>
 </project>
