--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,20 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>back-end-site</finalName><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>23</source><target>23</target>
-        <compilerArgs>--enable-preview</compilerArgs>
-    </configuration></plugin></plugins>
+        <finalName>back-end-site</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
