--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,6 @@
     <!-- Página de erro para pagina não encontrada -->
     <error-page>
         <error-code>404</error-code>
-        <location>/404.jsp</location>
+        <location>/WEB-INF/404.jsp</location>
     </error-page>
 </web-app>
